--- a/meey/public/index.html
+++ b/meey/public/index.html
@@ -55,7 +55,7 @@
         
     </header>
 
-    <section style="display: none;">
+    <section ">
         <div class="main-title">
             <div class="bg-title">Chức năng đa dạng</div>
             <div class="sm-title">Hãy cùng khám phá những tính năng hấp dẫn của MeeyTeam</div>
