--- a/meey/public/index.html
+++ b/meey/public/index.html
@@ -283,7 +283,7 @@
             <div class="sm-title">Hãy cùng khám phá những tính năng hấp dẫn của MeeyTeam</div>
         </div>
         <div class="main-function">
-            <div class="col-contents">
+            <div class="col-contents col-contents-right">
                 <div class="child-content chat" data-time="0s">
                     <div class="icon-function">
                         <img src="../assets/img/icon/chat.png" alt="">
@@ -292,7 +292,7 @@
                     <div class="content-function">
                         Tạo và tham gia các nhóm trò chuyện với bạn bè, đồng nghiệp và gia đình
                     </div>
-                    <div class="arrow">
+                    <div class="arrow arrow-r">
                         <img src="../assets/img/icon/Arrow - Right-func.png" alt="">
                     </div>
                 </div>
@@ -304,7 +304,7 @@
                     <div class="content-function">
                         Thực hiện cuộc gọi rõ ràng và chuyển sang video dễ dàng
                     </div>
-                    <div class="arrow">
+                    <div class="arrow arrow-r">
                         <img src="../assets/img/icon/Arrow - Right-func.png" alt="">
                     </div>
                 </div>
@@ -316,17 +316,17 @@
                     <div class="content-function">
                         Trải nghiệm âm thanh, hình ảnh chất lượng cao trong cuộc gọi 1-1 hoặc gọi nhóm
                     </div>
-                    <div class="arrow">
+                    <div class="arrow arrow-r">
                         <img src="../assets/img/icon/Arrow - Right-func.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="col-video">
+            <div class="col-video col-video-1">
                 <video id="videoFunction" height="600px" loop autoplay playsinline muted>
                     <source src="../assets/video/ipX5.mp4" type="video/mp4">
                 </video>
             </div>
-            <div class="col-contents">
+            <div class="col-contents col-contents-left">
                 <div class="child-content share-screen" data-time="15s">
                     <div class="icon-function">
                         <img src="../assets/img/icon/sharescreen.png" alt="">
@@ -335,7 +335,7 @@
                     <div class="content-function">
                         Chia sẻ màn hình hoặc bất cứ thứ gì trên màn hình của bạn trong khi họp trực tuyến
                     </div>
-                    <div class="arrow">
+                    <div class="arrow arrow-l">
                         <img src="../assets/img/icon/Arrow - Right-func.png" alt="">
                     </div>
                 </div>
@@ -347,7 +347,7 @@
                     <div class="content-function">
                         Chia sẻ màn hình hoặc bất cứ thứ gì trên màn hình của bạn trong khi họp trực tuyến
                     </div>
-                    <div class="arrow">
+                    <div class="arrow arrow-l">
                         <img src="../assets/img/icon/Arrow - Right-func.png" alt="">
                     </div>
                 </div>
@@ -359,10 +359,15 @@
                     <div class="content-function">
                         Cho phép thành viên thêm bạn bè vào nhóm bằng liên kết mời
                     </div>
-                    <div class="arrow">
+                    <div class="arrow arrow-l">
                         <img src="../assets/img/icon/Arrow - Right-func.png" alt="">
                     </div>
                 </div>
+            </div>
+            <div class="col-video col-video-2">
+                <video id="videoFunction-mobile" height="600px" loop autoplay playsinline muted>
+                    <source src="../assets/video/ipX5.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
     </section>
