--- a/meey2/public/index.html
+++ b/meey2/public/index.html
@@ -24,10 +24,10 @@
                 </div>
                 <div class="nav-link">
                     <ul>
-                        <li> <a href="#ss1">Tính năng</a> </li>
-                        <li><a href="#ss2">Cộng đồng</a> </li>
-                        <li><a href="#ss3">Bảo mật</a> </li>
-                        <li><a href="#ss5">Liên hệ </a> </li>
+                        <li> <a href="#ss1">Tính năng</a></li>
+                        <li><a href="#ss2">Cộng đồng</a></li>
+                        <li><a href="#ss3">Bảo mật</a></li>
+                        <li><a href="#ss5">Liên hệ </a></li>
                     </ul>
                 </div>
                 <div id="language-download">
@@ -83,6 +83,27 @@
                 <li><a href="#ss3">Bảo mật</a></li>
                 <li><a href="#ss5">Liên hệ </a></li>
             </ul>
+            <div class="l-d">
+                <div class="lang">
+                    <div class="btnDropDw" onclick="tgMenuLang()">
+                        <img class="earth" src="../assets/img/icon/planet-earth 1.png" alt="earth">
+                        <p>VI</p>
+                        <img class="arrowLang" src="../assets/img/icon/Arrow-nav.png" alt="">
+                    </div>
+                    <div class="list-lang-menu">
+                        <ul>
+                            <li><a href="">English</a></li>
+                            <li><a href="">Japanese</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <a href="#" class="down">
+                    <div class="btn-download">
+                        Tải ngay
+                    </div>
+                </a>
+            </div>
+            
         </nav>
     </div>
 
@@ -92,7 +113,7 @@
             <div class="bg-title">Tính năng nổi bật</div>
             <div class="sm-title">Được xây dựng cho các nhóm hiện đại</div>
         </div>
-        <div class="main-content v-destop">
+        <div class="main-content v-desktop">
             <div class="col col-img"></div>
             <div class="col col-content">
                 <div class="rw">
@@ -117,22 +138,57 @@
             </div>
         </div>
         <div class="main-content v-mobile">
-            
+            <div class="rw">
+                <div class="rw-icon"></div>
+                <div class="rw-img"></div>
+                <div class="rw-title">Chia sẻ mọi thứ</div>
+                <p>Chia sẻ miễn phí văn bản, tin nhắn giọng nói, hình ảnh, video, ảnh động sinh động và tập tin chỉ
+                    với điện thoại thông minh và kết nối internet của bạn</p>
+            </div>
+            <div class="rw">
+                <div class="rw-icon"></div>
+                <div class="rw-img"></div>
+                <div class="rw-title">Giao tiếp hiệu quả</div>
+                <p>Thực hiện các cuộc gọi và gọi video rõ nét, trò chuyện với mọi người mà không tốn cước di động
+                </p>
+            </div>
+            <div class="rw">
+                <div class="rw-icon"></div>
+                <div class="rw-img"></div>
+                <div class="rw-title">Gắn kết đội ngũ</div>
+                <p>Tạo và quản lý nhóm của bạn một cách dễ dàng giúp đội ngũ của bạn truyền đạt và tiếp cận thông
+                    tin một cách kịp thời nhất
+                </p>
+            </div>
         </div>
     </section>
     <!-- HOI THAO TRUC TUYEN------------------ -->
     <section id="ss2">
-        <div class="main-content-cus">
+        <div class="main-content-cus vdk-s2">
             <div class="title">Hội thảo trực tuyến</div>
             <div class="content">Thiết lập và tham gia các họp ở bất kì đâu, bất kì lúc nào chỉ với điện thoại thông
                 minh và kết nối mạng di động</div>
             <div class="btn-more"><a href="#">Tìm hiểu thêm</a></div>
         </div>
-        <div class="main-vid">
+        <div class="vmobile-s2">
+            <div class="title">
+                Hội thảo trực tuyến
+            </div>
+            <div class="main-vid">
+                <!-- <video id="videoFunction" height="600px">
+                    <source src="../assets/video/ipX2.mp4" type="video/mp4">
+                </video> -->
+            </div>
+            <div class="content">Thiết lập và tham gia các họp ở bất kì đâu, bất kì lúc nào chỉ với điện thoại thông
+                minh và kết nối mạng di động</div>
+            <div class="btn-more"><a href="#">Tìm hiểu thêm</a></div>
+        </div>
+        <div class="main-vid vdk-s2">
             <!-- <video id="videoFunction" height="600px">
                 <source src="../assets/video/ipX2.mp4" type="video/mp4">
             </video> -->
         </div>
+
     </section>
     <!-- CHUC NANG---------------------------- -->
     <section id="ss3">
@@ -223,8 +279,11 @@
                 </div>
             </div>
             <div class="col-video col-video-2">
+                <div class="arrow-mb">
+                    <img src="../assets/img/icon/Arrow - Right-func.png" alt="">
+                </div>
                 <video id="videoFunction-mobile" height="600px" loop autoplay playsinline muted>
-                    <source src="../assets/video/ipX5.mp4" type="video/mp4">
+                    <source src="../assets/video/ipX2.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
